--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,4 +6,195 @@
     android:layout_height="match_parent"
     tools:context=".MainActivity">
 
+    <android.support.constraint.ConstraintLayout
+        android:id="@+id/lock_layout"
+        android:layout_width="348dp"
+        android:layout_height="401dp"
+
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
+        android:layout_marginEnd="8dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
+
+        <android.support.constraint.ConstraintLayout
+            android:id="@+id/keypad_layout"
+            android:layout_width="242dp"
+            android:layout_height="318dp"
+            android:layout_marginBottom="24dp"
+            android:background="@color/colorPrimary"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.5"
+            app:layout_constraintStart_toStartOf="parent">
+
+            <Button
+                android:id="@+id/pad_0"
+                android:layout_width="70dp"
+                android:layout_height="70dp"
+                android:layout_marginStart="8dp"
+                android:layout_marginTop="8dp"
+                android:text="0"
+                android:textSize="30sp"
+                app:layout_constraintStart_toEndOf="@+id/pad_11"
+                app:layout_constraintTop_toBottomOf="@+id/pad_8" />
+
+            <Button
+                android:id="@+id/pad_1"
+                android:layout_width="70dp"
+                android:layout_height="70dp"
+                android:layout_marginStart="8dp"
+                android:layout_marginTop="8dp"
+                android:text="1"
+                android:textSize="30sp"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
+
+            <Button
+                android:id="@+id/pad_2"
+                android:layout_width="70dp"
+                android:layout_height="70dp"
+                android:layout_marginStart="8dp"
+                android:layout_marginTop="8dp"
+                android:text="2"
+                android:textSize="30sp"
+                app:layout_constraintStart_toEndOf="@+id/pad_1"
+                app:layout_constraintTop_toTopOf="parent" />
+
+            <Button
+                android:id="@+id/pad_3"
+                android:layout_width="70dp"
+                android:layout_height="70dp"
+                android:layout_marginStart="8dp"
+                android:layout_marginTop="8dp"
+                android:text="3"
+                android:textSize="30sp"
+                app:layout_constraintStart_toEndOf="@+id/pad_2"
+                app:layout_constraintTop_toTopOf="parent" />
+
+            <Button
+                android:id="@+id/pad_4"
+                android:layout_width="70dp"
+                android:layout_height="70dp"
+                android:layout_marginStart="8dp"
+                android:layout_marginTop="8dp"
+                android:text="4"
+                android:textSize="30sp"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/pad_1" />
+
+            <Button
+                android:id="@+id/pad_5"
+                android:layout_width="70dp"
+                android:layout_height="70dp"
+                android:layout_marginStart="8dp"
+                android:layout_marginTop="8dp"
+                android:text="5"
+                android:textSize="30sp"
+                app:layout_constraintStart_toEndOf="@+id/pad_4"
+                app:layout_constraintTop_toBottomOf="@+id/pad_2" />
+
+            <Button
+                android:id="@+id/pad_6"
+                android:layout_width="70dp"
+                android:layout_height="70dp"
+                android:layout_marginStart="8dp"
+                android:layout_marginTop="8dp"
+                android:text="6"
+                android:textSize="30sp"
+                app:layout_constraintStart_toEndOf="@+id/pad_5"
+                app:layout_constraintTop_toBottomOf="@+id/pad_3" />
+
+            <Button
+                android:id="@+id/pad_7"
+                android:layout_width="70dp"
+                android:layout_height="70dp"
+                android:layout_marginStart="8dp"
+                android:layout_marginTop="8dp"
+                android:text="7"
+                android:textSize="30sp"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/pad_4" />
+
+            <Button
+                android:id="@+id/pad_8"
+                android:layout_width="70dp"
+                android:layout_height="70dp"
+                android:layout_marginStart="8dp"
+                android:layout_marginTop="8dp"
+                android:text="8"
+                android:textSize="30sp"
+                app:layout_constraintStart_toEndOf="@+id/pad_7"
+                app:layout_constraintTop_toBottomOf="@+id/pad_5" />
+
+            <Button
+                android:id="@+id/pad_9"
+                android:layout_width="70dp"
+                android:layout_height="70dp"
+                android:layout_marginStart="8dp"
+                android:layout_marginTop="8dp"
+                android:text="9"
+                android:textSize="30sp"
+                app:layout_constraintStart_toEndOf="@+id/pad_8"
+                app:layout_constraintTop_toBottomOf="@+id/pad_6" />
+
+            <ImageButton
+                android:id="@+id/pad_10"
+                android:layout_width="70dp"
+                android:layout_height="70dp"
+                android:layout_marginStart="8dp"
+                android:layout_marginTop="8dp"
+                android:scaleType="fitCenter"
+                android:text="9"
+                android:textSize="30sp"
+                app:layout_constraintStart_toEndOf="@+id/pad_0"
+                app:layout_constraintTop_toBottomOf="@+id/pad_9"
+                app:srcCompat="@color/colorAccent" />
+
+            <ImageButton
+                android:id="@+id/pad_11"
+                android:layout_width="70dp"
+                android:layout_height="70dp"
+                android:layout_marginStart="8dp"
+                android:layout_marginTop="8dp"
+                android:scaleType="fitCenter"
+                android:text="X"
+                android:textSize="30sp"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/pad_7"
+                app:srcCompat="@color/colorAccent" />
+
+        </android.support.constraint.ConstraintLayout>
+
+        <EditText
+            android:id="@+id/password_field"
+            android:layout_width="242dp"
+            android:layout_height="48dp"
+            android:layout_marginBottom="8dp"
+            android:background="@color/colorPrimary"
+            android:ems="10"
+            android:inputType="numberPassword"
+            android:maxLength="3"
+            android:textAlignment="center"
+            android:textColor="@color/colorAccent"
+            android:textSize="36sp"
+            android:textStyle="bold"
+            app:layout_constraintBottom_toTopOf="@+id/keypad_layout"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.5"
+            app:layout_constraintStart_toStartOf="parent" />
+    </android.support.constraint.ConstraintLayout>
+
+    <ImageButton
+        android:id="@+id/lock_button"
+        android:layout_width="140dp"
+        android:layout_height="76dp"
+        android:layout_marginStart="24dp"
+        android:layout_marginBottom="24dp"
+        android:scaleType="fitCenter"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:srcCompat="@color/colorAccent" />
 </android.support.constraint.ConstraintLayout>
