--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -13,7 +13,7 @@
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
         android:layout_marginEnd="8dp"
-        android:visibility="visible"
+        android:visibility="gone"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
@@ -25,9 +25,9 @@
             style="?android:attr/progressBarStyleHorizontal"
             android:layout_width="241dp"
             android:layout_height="16dp"
-            android:layout_marginBottom="64dp"
+            android:layout_marginBottom="32dp"
             android:visibility="visible"
-            app:layout_constraintBottom_toBottomOf="@+id/record_audio_button"
+            app:layout_constraintBottom_toTopOf="@+id/record_audio_button"
             app:layout_constraintEnd_toStartOf="@+id/record_audio_button"
             app:layout_constraintHorizontal_bias="0.5"
             app:layout_constraintStart_toEndOf="@+id/record_audio_button" />
@@ -37,26 +37,10 @@
             style="?android:attr/progressBarStyleHorizontal"
             android:layout_width="241dp"
             android:layout_height="16dp"
-            android:layout_marginBottom="68dp"
+            android:layout_marginBottom="32dp"
             android:visibility="visible"
-            app:layout_constraintBottom_toBottomOf="@+id/record_audio_button"
+            app:layout_constraintBottom_toTopOf="@+id/record_audio_button"
             app:layout_constraintEnd_toStartOf="@+id/record_audio_button"
-            app:layout_constraintHorizontal_bias="0.5"
-            app:layout_constraintStart_toEndOf="@+id/record_audio_button" />
-
-        <TextView
-            android:id="@+id/audio_info_text"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginBottom="90dp"
-            android:text="PRESS TO START RECORDING AUDIO"
-            android:textColor="@color/colorPrimary"
-            android:textSize="14sp"
-            android:textStyle="bold"
-            android:visibility="visible"
-            app:layout_constraintBottom_toBottomOf="@+id/record_audio_button"
-            app:layout_constraintEnd_toStartOf="@+id/record_audio_button"
-            app:layout_constraintHorizontal_bias="0.5"
             app:layout_constraintStart_toEndOf="@+id/record_audio_button" />
 
         <Button
@@ -81,21 +65,33 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginEnd="8dp"
-            android:layout_marginBottom="8dp"
+            android:layout_marginBottom="16dp"
             android:scaleType="fitCenter"
             android:text="gönder"
             android:visibility="visible"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent" />
+            app:layout_constraintBottom_toTopOf="@+id/audio_remaining_time_bar"
+            app:layout_constraintEnd_toEndOf="@+id/audio_remaining_time_bar" />
 
         <Button
-            android:id="@+id/cancel_audio_button"
+            android:id="@+id/delete_audio_button"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="8dp"
+            android:layout_marginBottom="17dp"
+            android:scaleType="fitCenter"
+            android:text="SİL"
+            android:visibility="visible"
+            app:layout_constraintBottom_toTopOf="@+id/audio_remaining_time_bar"
+            app:layout_constraintStart_toStartOf="@+id/audio_remaining_time_bar" />
+
+        <Button
+            android:id="@+id/stop_audio_button"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="8dp"
             android:layout_marginBottom="8dp"
             android:scaleType="fitCenter"
-            android:text="iptal"
+            android:text="BİTİR"
             android:visibility="visible"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent" />
@@ -136,41 +132,52 @@
             app:layout_constraintTop_toTopOf="parent" />
 
         <Button
-            android:id="@+id/cancel_video_button"
-            android:layout_width="78dp"
-            android:layout_height="56dp"
-            android:layout_marginStart="24dp"
-            android:layout_marginBottom="24dp"
+            android:id="@+id/stop_video_button"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="8dp"
+            android:layout_marginBottom="8dp"
             android:scaleType="fitCenter"
-            android:text="iptal"
+            android:text="DURDUR"
             android:visibility="visible"
-            app:layout_constraintBottom_toBottomOf="@+id/video_layout_bottom"
-            app:layout_constraintStart_toStartOf="@+id/video_layout_bottom" />
+            app:layout_constraintBottom_toBottomOf="@+id/video_surface"
+            app:layout_constraintStart_toStartOf="@+id/video_surface" />
 
         <Button
             android:id="@+id/send_video_button"
-            android:layout_width="82dp"
-            android:layout_height="56dp"
-            android:layout_marginEnd="24dp"
-            android:layout_marginBottom="24dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="8dp"
+            android:layout_marginEnd="8dp"
             android:scaleType="fitCenter"
             android:text="gönder"
             android:visibility="visible"
-            app:layout_constraintBottom_toBottomOf="@+id/video_layout_bottom"
-            app:layout_constraintEnd_toEndOf="@+id/video_layout_bottom" />
+            app:layout_constraintEnd_toEndOf="@+id/video_surface"
+            app:layout_constraintTop_toTopOf="@+id/video_surface" />
 
         <Button
-            android:id="@+id/start_video_button"
-            android:layout_width="81dp"
-            android:layout_height="56dp"
+            android:id="@+id/delete_video_button"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:layout_marginStart="8dp"
-            android:layout_marginBottom="24dp"
+            android:layout_marginTop="8dp"
             android:scaleType="fitCenter"
-            android:text="kaydet"
+            android:text="SİL"
             android:visibility="visible"
-            app:layout_constraintBottom_toBottomOf="@+id/video_layout_bottom"
-            app:layout_constraintEnd_toEndOf="@+id/video_layout_bottom"
-            app:layout_constraintStart_toStartOf="@+id/video_layout_bottom" />
+            app:layout_constraintStart_toStartOf="@+id/video_surface"
+            app:layout_constraintTop_toTopOf="@+id/video_surface" />
+
+        <Button
+            android:id="@+id/record_video_button"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginEnd="8dp"
+            android:layout_marginBottom="8dp"
+            android:scaleType="fitCenter"
+            android:text="KAYDET"
+            android:visibility="visible"
+            app:layout_constraintBottom_toBottomOf="@+id/video_surface"
+            app:layout_constraintEnd_toEndOf="@+id/video_surface" />
 
 
     </android.support.constraint.ConstraintLayout>
@@ -180,7 +187,7 @@
         android:layout_width="match_parent"
         android:layout_height="423dp"
         android:layout_marginTop="8dp"
-        android:visibility="gone"
+        android:visibility="visible"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
@@ -193,9 +200,8 @@
             android:background="@null"
             android:cursorVisible="false"
             android:ems="10"
-            android:hint="WRITE YOUR MESSAGE"
+            android:hint="MESAJINIZI YAZIN"
             android:inputType="textMultiLine"
-            android:maxLength="150"
             android:paddingLeft="40dp"
             android:paddingRight="40dp"
             android:textAlignment="center"
@@ -210,8 +216,8 @@
 
         <Button
             android:id="@+id/send_text_button"
-            android:layout_width="85dp"
-            android:layout_height="56dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:layout_marginEnd="4dp"
             android:layout_marginBottom="4dp"
             android:scaleType="fitCenter"
@@ -222,8 +228,8 @@
 
         <Button
             android:id="@+id/cancel_text_button"
-            android:layout_width="74dp"
-            android:layout_height="56dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:layout_marginStart="4dp"
             android:layout_marginBottom="4dp"
             android:scaleType="fitCenter"
@@ -244,8 +250,8 @@
 
         <Button
             android:id="@+id/listen_text_button"
-            android:layout_width="73dp"
-            android:layout_height="56dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:layout_marginStart="8dp"
             android:layout_marginTop="8dp"
             android:scaleType="fitCenter"
@@ -253,6 +259,16 @@
             android:visibility="visible"
             app:layout_constraintStart_toStartOf="@+id/message_field"
             app:layout_constraintTop_toTopOf="@+id/message_field" />
+
+        <ProgressBar
+            android:id="@+id/listen_progressbar"
+            style="?android:attr/progressBarStyle"
+            android:layout_width="25dp"
+            android:layout_height="25dp"
+            app:layout_constraintBottom_toBottomOf="@+id/listen_text_button"
+            app:layout_constraintEnd_toEndOf="@+id/message_field"
+            app:layout_constraintStart_toStartOf="@+id/message_field"
+            app:layout_constraintTop_toTopOf="@+id/listen_text_button" />
 
     </android.support.constraint.ConstraintLayout>
 
